css/style.css
/* ... */
.ucb-main-nav-container {
  display: flex;
  flex-grow: 0;
  flex-shrink: 0;
  padding: 0;
  height: inherit;
  align-items: center;
}

@media only screen and (max-width: 575px) {
  .page-header {
    box-shadow: 0 2px 5px rgba(0 0 0 / 10%);
  }

  .ucb-main-nav-container {
    flex-direction: column;
  }
}

/*********** Intro Wide **************/
.ucb-intro-wide-region .block {
  margin-bottom: 0;
}
.ucb-intro-wide-region {
  background-color: #000;
  color: #fff;
}
.ucb-intro-wide-region .block-hero-unit.bs-background-none .block-title-text {
  color: #fff;
}
/*********** Main Menu **************/
ul.ucb-main-menu.nav {
  flex-grow: 1;
}

.ucb-menu a.nav-link {
  font-size: 0.85em;
  vertical-align: baseline;
  font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 600;
  line-height: 1rem;
  margin: 0.5rem;
  color: var(--ucb-darker);
  padding: 0.5rem;
}

.ucb-main-menu li.menu-item a.nav-link {
  color: var(--ucb-darker);
  border-bottom: 2px solid #fff;
  font-weight: 600;
  line-height: 2rem;
  padding: .25rem 1rem;
  margin: 2px 0 0 0;
}

.ucb-footer-top .ucb-menu a.nav-link {
  color: white;
  font-size: 1.25em;
  padding: 0.5rem;
  border-radius: 0.2rem;
}

.mobile-menu-toggle {
  display: none;
}

/********** Secondary Menu **********/

.ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu.social-media .icon-bg:hover,
.ucb-menu a.nav-link:hover {
  color: var(--ucb-black);
  background: var(--ucb-light-contrast);
  border-radius: 3px;
}
.ucb-main-nav-container.ucb-secondary-menu-position-inline .menu.social-media .icon-bg {
  transition: none;
  color: var(--ucb-black);

}
.ucb-footer-nav-block .ucb-menu.nav {
  flex-direction: column;
  flex-grow: 1;
  padding-right: 2em;
}

.ucb-footer-top .menu.social-media {
  margin-bottom: 0;
}

.ucb-footer-nav-block .ucb-menu a.nav-link {
  color: #cfb87b;
  background: transparent;
  text-align: left;
  font-size: 14px;
  border-bottom: 1px solid #555;
  border-radius: 0;
  padding: 0.5rem 0;
  margin: 0.5rem 0;
}

.ucb-main-menu li.menu-item a.nav-link {
  font-size: 1em;
  background-color: inherit;
  border-radius: 0;
}

.ucb-main-menu li.menu-item a.nav-link:hover,
.ucb-main-menu li.menu-item a.nav-link.is-active,
.ucb-main-menu li.menu-item.active a.nav-link:first-of-type {
  border-bottom: 2px solid black;
  color: black;
}

/****** Local Tasks ********/
.ucb-local-tasks {
  top: 0;
  width: 100%;
  background-color: var(--ucb-link);
  z-index: 99;
  height: 2.5em;
  padding: 0;
  margin: 0;
}

.ucb-local-tasks ul {
  display: flex;
  list-style-type: none;
  height: 2.5em;
  line-height: 1.25em;
  align-items: center;
  justify-content: flex-start;
  padding: 0;
  margin: 0;
}

.ucb-local-tasks ul li {
  width: 100px;
  padding: 0.25em;
  text-align: center;
  background-color: inherit;
  color: inherit;
}

.ucb-local-tasks ul li:hover {
  background-color: rgba(255 255 255 / 15%);
  transition: background-color 200ms;
}

.ucb-local-tasks li>a:hover {
  color: #fff;
}


/********* Footer ***********/

.ucb-footer p {
  margin: 0;
  padding: 0;
}

.ucb-footer a.ucb-home-link {
  font-weight: bold;
}

.ucb-footer img.ucb-footer-be-boulder {
  max-width: 240px;
  width: 100%;
  height: auto;
  display: inline-block;
}

.ucb-footer .ucb-footer-links {
  font-size: 85%;
}

.ucb-homepage-footer {
  display: block;
  flex: 1;
}

.ucb-footer-top {
  padding: 20px 0;
}

.ucb-footer-top .ucb-menu li.menu-item {
  flex-grow: 1;
  text-align: center;
}

.ucb-footer-top .ucb-menu a.nav-link:hover {
  box-shadow: 0 2px 5px rgba(0 0 0 /30%);
}

.ucb-footer-nav-block {
  display: flex;
  flex-direction: row;
  flex-grow: 1;
  max-width: 100%;
  flex-basis: 0;
  -ms-flex-positive: 1;
  -mx-flex-preferred-size: 0;
}

.ucb-footer-nav-container {
  display: flex;
  flex: 1 0 auto;
  margin: 2em auto;
}

.ucb-footer-nav-container .ucb-menu-title {
  color: white;
  font-size: 1.4rem;
  font-family:
    "Roboto Condensed",
    Roboto,
    "Helvetica Neue",
    Helvetica,
    Arial,
    sans-serif;
  font-weight: bold;
}

.ucb-system-menu-block {
  display: block;
  width: 100%;
}

.ucb-footer-nav-block .ucb-menu a.nav-link:hover {
  color: white;
  background: transparent;
  box-shadow: none;
}

.ucb-footer-bottom {
  color: white;
  padding: 40px 0;
  text-align: left;
  font-size: 0.9rem;
}

.ucb-footer-menu-region .block-menu-blocksocial-media-menu,
.ucb-footer-menu-region .block-system-menu-blocksocial-media-menu {
  padding: 10px;
  display: flex;
  align-items: center;
}
.ucb-footer-menu-region .container {
  display: flex;
}

.menu.social-media {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 0.5rem;
  margin-bottom: 1em;
  font-size: 1.25rem;
  line-height: 1.25;
}

.menu.social-media .icon-label {
  display: none;
}

.be-boulder-container {
  display: flex;
  align-items: top;
  justify-content: space-between;
  padding-bottom: 2em;
  flex-wrap: wrap;
}

.ucb-footer-be-boulder {
  padding-bottom: 2em;
}

/**** Styles for media types inserted with the media text editor embed button ****/

/**** O-EMBED Videos Media *******/
.field_media_oembed_video {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 56.25%;
  /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
}

.field_media_oembed_video iframe {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

/* Overriding styles for inserted video media .field_media_oembed_video, if floated */
div.align-left .field_media_oembed_video,
div.align-right .field_media_oembed_video {
  position: static; /* Reset position */
  padding-top: 0; /* Remove padding-top */
  object-fit: cover;
  max-width: 100%; /* Stop embed from spanning across columns */
  display: inline; /* Fixes overflow error tied to floating an iframe */
}
/* ... */

